# lumd

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  home-manager-module.nix  lumd.service  nixos-module.nix  shell.nix
.cargo/: config.toml
examples/: config.toml
lumctl/: Cargo.toml
lumctl/src/: main.rs
lumd/: Cargo.toml
lumd/src/: backlight.rs  config.rs  device.rs  error.rs  logger.rs  main.rs  paths.rs  server.rs  signal.rs
test_logger_proj/: Cargo.toml
test_logger_proj/src/: main.rs
