[package]
name = "lumctl"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = {version = "0.30.1", features = ["user"]}
xdg = "2.5"
# Use minimal clap features to avoid unnecessary dependencies
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage"] }
thiserror = "1.0"
