[package]
name = "lumd"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.30.1", features = ["user"] }
thiserror = "1.0"
slog = "2.7.0"
slog-async = "2.7.0"
slog-bunyan = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
xdg = "2.5"
signal-hook = "0.3.17"

# TOML with minimal features
toml = { version = "0.5", default-features = false }

# Time formatting without Windows dependencies
time = { version = "0.3", default-features = false, features = ["formatting", "std", "macros", "local-offset"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies