[package]
name = "lumd"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.30.1", features = ["user"] }
slog = "2.7.0"
slog-async = "2.7.0"
slog-json = "2.6.1"  # Use slog-json directly instead of slog-bunyan
# Use manual struct serialization instead of derive to avoid proc-macro issues
serde = { version = "1.0", default-features = false, features = ["std"] }
xdg = "2.5"
signal-hook = "0.3.17"

# TOML with minimal features
toml = { version = "0.5", default-features = false }

# Linux-specific dependencies
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Additional Linux-specific dependencies

# Profile settings moved to workspace Cargo.toml