[package]
name = "lumd"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.30.1", features = ["user"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"  # Use slog-term for human-readable logs
# Use manual struct serialization instead of derive to avoid proc-macro issues
serde = { version = "1.0.219", default-features = false, features = ["std"] }
xdg = "3.0.0"
signal-hook = "0.3.18"

# TOML with parse feature enabled
toml = { version = "0.8.23", default-features = false, features = ["parse"] }

# No direct libc dependency

[target.'cfg(target_os = "linux")'.dependencies]
# Additional Linux-specific dependencies

# Profile settings moved to workspace Cargo.toml